layout almost complete.  Working on alignment Issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,8 @@ button {
 	border-radius: 5px;
 	color: #f9faf8;
 	margin: 0 0 50px 10px;
+	border-color: #3882f6;
+	padding: 5px 20px 5px 20px;
 }
 
 .Header-logo {
@@ -53,22 +55,36 @@ button {
 
 .main-content-bottom {
 	background-color: #e5e7eb;
+	display: flex;
+	flex-flow: column;
 }
 
 .main-content-bottom p {
 	font-size: 36px;
 	font-style: oblique 15deg;
 	color: #1f2937;
+	max-width: 50%;
+	align-self: center;
+	margin-bottom: -10px;
 }
 
 .main-content-bottom .quote-author {
 	font-style: none;
 	font-weight: bold;
+	text-align: right;
+	max-width: 75%;
+	margin-bottom: 50px;
+	margin-top: 10px;
 }
 
 .header-content .placeholderimg {
 	width: 450px;
 	height: 200px;
+	background-color: #e5e7eb;
+	text-align: center;
+	line-height: 200px;
+	align-self: center;
+	min-width: 450px;
 }
 
 .main-content-bottom-bar {
@@ -76,42 +92,24 @@ button {
 	border-radius: 10px;
 	width: 75%;
 	display: flex;
-	flex: 1, 1, 0;
 	flex-wrap: wrap;
+	color: #f9faf8;
 	justify-content: space-evenly;
 	align-items: center;
-	color: #f9faf8;
-}
-
-main-content img {
-	border-style: solid;
-}
-
-.middle-container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	padding: 40px;
-	justify-content: space-between;
+	margin: 75px 0px 75px 0px;
+	padding: 40px 40px;
 }
 
 .main-content-bottom-bar button {
-	width: 100px;
-	height: 50%;
 	border: #e5e7eb solid 1px;
-	align-self: center;
-}
-
-.call-to-action {
-	font-weight: bold;
-	color: #f9faf8;
-	font-size: 18px;
+	margin: auto;
+	flex-grow: 0;
 }
 
 .main-container {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: flex-start;
 	flex: 1;
 }
 
@@ -138,4 +136,44 @@ main-content img {
 .header-content p {
 	margin-top: 0px;
 	padding: 10px;
+}
+
+.main-content {
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+}
+
+.img {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	max-width: 10%;
+	padding: 10px;
+	margin: 5px;
+}
+.box {
+	border: solid #3882f6 2px;
+	width: 100px;
+	height: 100px;
+	align-items: flex-end;
+	border-radius: 5px;
+}
+
+.subtext {
+	display: flex;
+	margin-bottom: 75px;
+	flex-wrap: wrap;
+	justify-content: center;
+	flex: 1 1 0;
+}
+
+.subtext p {
+	max-width: 60%;
+	text-align: center;
+	text-align-last: center;
+}
+
+h3 {
+	margin-bottom: 0px;
 }
